--- a/main4.css
+++ b/main4.css
@@ -2,13 +2,12 @@
 	background-color: orange;
 	display:inline-block; 	
 	margin-right: 20px;
-	margin-top: 0;
+	margin-left: 20px;
 }
 .grey{
 	background-color: grey;
 	display: inline-block;
-	margin-right: 20px;
-	margin-top: 0;
+	/*margin-right: 20px;*/
 
 }
 
